# gif_pipeline

./: README.md  channel.py  config.json  database.py  database.sql  database_schema.sql  group.py  helpers.py  main.py  menu_cache.py  message.py  pipeline.py  pyproject.toml  requirements.txt  telegram_client.py  telegram_convert.bat  telegram_convert.py
gif_pipeline/: _version.py  chat.py  chat_builder.py  chat_config.py  chat_data.py  database.py  database_schema.sql  group.py  menu_cache.py  message.py  pipeline.py  startup_monitor.py  tag_manager.py  telegram_client.py  text_formatter.py  utils.py  video_tags.py
gif_pipeline/helpers/: audio_helper.py  caption_helper.py  channel_fwd_tag_helper.py  chart_helper.py  chunk_split_helper.py  delete_helper.py  download_helper.py  duplicate_helper.py  fa_helper.py  ffprobe_helper.py  find_helper.py  frigate_helper.py  help_helper.py  helpers.py  imgur_gallery_helper.py  menu_helper.py  merge_helper.py  msg_helper.py  qr_helper.py  reverse_helper.py  scene_split_helper.py  schedule_helper.py  send_helper.py  stabilise_helper.py  subscription_helper.py  tag_helper.py  telegram_gif_helper.py  thumbnail_helper.py  update_yt_dl_helper.py  video_crop_helper.py  video_cut_helper.py  video_helper.py  video_rotate_helper.py  video_speed_helper.py  zip_helper.py
gif_pipeline/helpers/menus/: check_tags_menu.py  delete_menu.py  destination_menu.py  edit_gnostic_tag_values_menu.py  edit_single_tag_values_menu.py  edit_tag_select_menu.py  edit_tag_values_menu.py  edit_text_tag_values_menu.py  menu.py  not_gif_confirmation_menu.py  schedule_reminder_menu.py  send_confirmation_menu.py  split_scenes_confirmation_menu.py  tag_select_menu.py
gif_pipeline/helpers/public/: public_helpers.py  public_tag_helper.py
gif_pipeline/helpers/subscriptions/: imgur_subscription.py  instagram_subscription.py  reddit_subscription.py  rss_subscription.py  subscription.py  telegram_subscription.py  twitter_subscription.py  unitialised_subscription.py  youtube_dl_subscription.py
gif_pipeline/tasks/: ffmpeg_task.py  ffmprobe_task.py  hash_dir_task.py  task.py  task_worker.py  update_youtube_dl_task.py  youtube_dl_task.py
helpers/: delete_helper.py  download_helper.py  duplicate_helper.py  ffprobe_helper.py  helpers.py  imgur_gallery_helper.py  menu_helper.py  merge_helper.py  reverse_helper.py  scene_split_helper.py  send_helper.py  telegram_gif_helper.py  video_crop_helper.py  video_helper.py  video_rotate_helper.py  zip_helper.py
scripts/: cleanup_sub_errors.py  get_twitter_tokens.py  import_deergif_tags.py  telegram_convert.bat  telegram_convert.py  twitter_example.py
tasks/: ffmpeg_task.py  task.py  task_worker.py  youtube_dl_task.py
website/: main.py
website/backend/: main.py
website/frontend/: main.py
website/frontend/templates/: chat_page.html.jinja2
