[tool.poetry]
name = "gif_pipeline"
version = "1.0.0"
description = "Telegram application to edit videos and create telegram-gifs, in telegram. Managing gif channels, tags, and checking for duplicates"
authors = ["Joshua Coales <joshua@coales.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.23.0"
tqdm = "^4.62.3"
ImageHash = "^4.2.1"
Pillow = "^8.4.0"
cryptg = "^0.2.post4"
ffmpy3 = "^0.2.4"
requests = "^2.26.0"
async_generator = "^1.10"
python-dateutil = "^2.8.2"
scenedetect = {extras = ["opencv", "progress_bar"], version = "^0.5.6"}
isodate = "^0.6.0"
prometheus-client = "^0.12.0"
tomlkit = "^0.7.2"
asyncpraw = "^7.5.0"
feedparser = "^6.0.8"
bleach = "^4.1.0"
matplotlib = "^3.5.0"
tweepy = "^4.5.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
mypy = "^0.961"
black = "^22.3.0"
flake8-type-checking = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
mypy_path = "gif_pipeline/stubs"
files = "gif_pipeline"

[tool.isort]
line_length = 120
